nginx/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-managed-rapid
  name: nginx
