nginx/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  gateways:
  - asm-oauth/userauth
  hosts:
  - 'infra-auth.alpha.phac.gc.ca'
  http:
  - match:
    - uri:
        prefix: /
    name: nginx-routes
    route:
    - destination:
        host: nginx.nginx.svc.cluster.local
        port:
          number: 8080
